69 - Add backend logic to add duration to topic